<?xml version="1.0" encoding="UTF-8"?><!--
  ~ This file is part of the Translation Tools, modified on 30.08.17 19:35.
  ~ This work is free. You can redistribute it and/or modify it under the
  ~ terms of the Do What The Fuck You Want To Public License, Version 2,
  ~ as published by Sam Hocevar. See the COPYING file for more details.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>community</groupId>
    <artifactId>translation-tools</artifactId>
    <version>9</version>
    <dependencies>
        <dependency>
            <groupId>net.prodisfuzz</groupId>
            <artifactId>simple-command-line-parser</artifactId>
            <version>8</version>
        </dependency>
    </dependencies>
    <packaging>jar</packaging>
    <name>Translation-Tool</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>12</release>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.1
                </version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>main.TranslationTools</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <finalName>TranslationTools</finalName>
    </build>
</project>
